--- a/.github/workflows/check-llms.yml
+++ b/.github/workflows/check-llms.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Calculate SHA256 hash of the generated llms.txt
         id: generated_llms_hash
         run: |
-          # Dynamically detect the repo name instead of hardcoding it
-          llms_file="$GITHUB_WORKSPACE/llms.txt"
+          # Full path to the generated llms.txt file
+          llms_file="/home/runner/work/docs/kluster-docs/llms.txt"
 
           # Check if the file exists before calculating the hash
           if [ -f "$llms_file" ]; then
