--- a/.github/workflows/check-llms.yml
+++ b/.github/workflows/check-llms.yml
@@ -13,6 +13,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Check if branch is behind main
+        run: |
+          git fetch origin main
+          behind_count=$(git rev-list --count HEAD..origin/main)
+
+          if [ "$behind_count" -gt 0 ]; then
+            echo "Error: Your branch is $behind_count commits behind main. Please rebase or merge main before proceeding."
+            exit 1
+          else
+            echo "Branch is up to date with main."
+          fi
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
