--- a/.github/workflows/check-llms.yml
+++ b/.github/workflows/check-llms.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch all history for accurate results
 
       - name: Check if branch is behind main
         run: |
