--- a/.github/workflows/check-url-changes.yml
+++ b/.github/workflows/check-url-changes.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   check-url-changes:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
