try permission fix

--- a/.github/workflows/check-url-changes.yml
+++ b/.github/workflows/check-url-changes.yml
@@ -9,6 +9,7 @@ jobs:
   check-url-changes:
     permissions:
       issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
