--- a/.github/workflows/check-url-changes.yml
+++ b/.github/workflows/check-url-changes.yml
@@ -5,44 +5,42 @@ on:
     branches:
       - main
 
+permissions:
+  issues: write
+  pull-requests: write
+
 jobs:
   check-url-changes:
-    permissions:
-      issues: write
-      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Identify deleted and renamed files
         run: |
-          # Store deleted files
           DELETED_FILES=$(git diff --name-status origin/main ${{ github.event.pull_request.head.sha }} | grep '^D.*\.md$' | cut -f2- || true)
-          echo "DELETED_FILES<<EOF" >> $GITHUB_ENV
-          echo "$DELETED_FILES" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "DELETED_FILES=$(echo "$DELETED_FILES" | tr '\n' ' ')" >> $GITHUB_ENV
 
-          # Store renamed/moved files
           RENAMED_FILES=$(git diff --name-status origin/main ${{ github.event.pull_request.head.sha }} | grep '^R.*\.md$' | awk '{print $2 " -> " $3}' || true)
-          echo "RENAMED_FILES<<EOF" >> $GITHUB_ENV
-          echo "$RENAMED_FILES" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "RENAMED_FILES=$(echo "$RENAMED_FILES" | tr '\n' ' ')" >> $GITHUB_ENV
 
-          # Set warning flag if there are any changes
-          if [ ! -z "$DELETED_FILES" ] || [ ! -z "$RENAMED_FILES" ]; then
+          if [ -n "$DELETED_FILES" ] || [ -n "$RENAMED_FILES" ]; then
             echo "warning=true" >> $GITHUB_ENV
           else
             echo "warning=false" >> $GITHUB_ENV
           fi
 
-          # Print to console for logging
-          echo "Deleted files:"
-          echo "$DELETED_FILES"
-          echo -e "\nRenamed/Moved files:"
-          echo "$RENAMED_FILES"
+          echo "Deleted files: $DELETED_FILES"
+          echo "Renamed/Moved files: $RENAMED_FILES"
+
+      - name: Debug Environment Variables
+        run: |
+          echo "warning=${{ env.warning }}"
+          echo "Deleted Files: ${{ env.DELETED_FILES }}"
+          echo "Renamed Files: ${{ env.RENAMED_FILES }}"
 
       - name: Post PR warning
         if: env.warning == 'true'
@@ -52,8 +50,8 @@ jobs:
           script: |
             const issue_number = context.payload.pull_request.number;
             const repo = context.repo;
-            const deletedFiles = `${process.env.DELETED_FILES}`.trim();
-            const renamedFiles = `${process.env.RENAMED_FILES}`.trim();
+            const deletedFiles = process.env.DELETED_FILES.trim();
+            const renamedFiles = process.env.RENAMED_FILES.trim();
 
             let message = `🔍 **Documentation URL Checker**\n\nThis PR modifies documentation files in ways that could potentially create broken links.\n\n`;
 
@@ -72,4 +70,17 @@ jobs:
               repo: repo.repo,
               issue_number: issue_number,
               body: message
+            });
+
+      - name: Test PR Comment (Debugging)
+        if: env.warning == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.pull_request.number,
+              body: "🚀 Debug Test Comment: The script executed."
             });
