--- a/.github/workflows/check-url-changes.yml
+++ b/.github/workflows/check-url-changes.yml
@@ -6,8 +6,9 @@ on:
       - main
 
 permissions:
-  issues: write
+  contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   check-url-changes:
