--- a/.github/workflows/use-check-mkdocs-build.yml
+++ b/.github/workflows/use-check-mkdocs-build.yml
@@ -1,14 +1,16 @@
-name: Trigger MkDocs Build
+name: CheckMkDocsBuild
 
 on:
   pull_request_target:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  call-build-docs:
-    uses: Telucero/workflows/.github/workflows/check-mkdocs-build.yml@Central_repo_test
+  build-docs:
+    uses: Telucero/workflows/.github/workflows/mkdocs-build.yml@main
     with:
-      repo_name: docs
-      mkdocs_repo: Telucero/kluster-mkdocs
+      mkdocs_repo: papermoonio/kluster-mkdocs
+      docs_dir: kluster-docs
+      needs_mistune: true
     secrets:
-      REPO_SCOPED_TOKEN: ${{ secrets.REPO_SCOPED_TOKEN }}
+      token: ${{ secrets.KLUSTER_MKDOCS_READ }}
