--- a/.github/workflows/pr-link-checker.yml
+++ b/.github/workflows/pr-link-checker.yml
@@ -9,6 +9,7 @@ jobs:
     with:
       mkdocs_repo: papermoonio/kluster-mkdocs
       docs_repo: kluster-ai/docs
+      docs_checkout: kluster-docs
       url: https://docs.kluster.ai
     secrets:
       GH_TOKEN: ${{ secrets.GH_PR_404_CHECKER }}
