--- a/verify/.nav.yml
+++ b/verify/.nav.yml
@@ -4,5 +4,6 @@ nav:
   - 'Overview': overview.md
   - 'Get an API key': /get-api-key/
   - 'Get started': quickstart
+  - 'Code': code
   - 'Reliability': reliability
   - mcp
