--- a/verify/code/.nav.yml
+++ b/verify/code/.nav.yml
@@ -1,4 +1,4 @@
 nav:
-  - Overview: overview.md
-  - Integrations: integrations.md
-  - Tools: tools.md
+  - 'Overview': overview.md
+  - 'Integrations': integrations.md
+  - 'Tools': tools.md
