--- a/verify/code/.nav.yml
+++ b/verify/code/.nav.yml
@@ -1,4 +1,5 @@
 nav:
-  - 'Overview': overview.md
+  - 'Introduction': overview.md
+  - 'Get started': quickstart.md
   - 'Integrations': integrations.md
   - 'Tools': tools.md
