Refactoring integrations in 2 categories

--- a/verify/code/.nav.yml
+++ b/verify/code/.nav.yml
@@ -1,6 +1,6 @@
 nav:
   - 'Introduction': overview.md
   - 'Get started': quickstart.md
-  - 'Integrations': integrations.md
+  - 'Integrations': integrations
   - 'Tools': tools.md
   - 'Examples': examples
