vscode example with screenshots

--- a/verify/code/examples/.nav.yml
+++ b/verify/code/examples/.nav.yml
@@ -1,2 +1,3 @@
 nav:
   - 'Cursor: Firebase Authentication with Next.js': cursor-firebase-nextjs.md
+  - 'VS Code: Secure Admin Endpoints with Express': vscode-admin-endpoint.md
