--- a/verify/.nav.yml
+++ b/verify/.nav.yml
@@ -5,6 +5,7 @@ nav:
   - 'Get an API key': get-api-key.md
   - 'Get started': quickstart.md
   - 'Tools reference': tools.md
+  - 'Rules': rules.md
   - 'Integrations': integrations
   - 'Examples': examples
 
