rules.md:   - Changed {target=\_blank} to {target=_blank} (3 instances)   - Updated title to lowercase # rules   - Changed "Verify Code" to "Verify code"   - Changed "Manual Rules" to "Manual rules"   - Changed "Learned Rules" to "Learned rules"   - Changed "Setup instructions" to "Set up instructions"   - Changed "Extraction Rate Limit" to "Extraction rate limit"   - Removed bold formatting from link text
  verify/.nav.yml:
  - Changed navigation title from 'Rules' to 'rules' (sentence case)

--- a/verify/.nav.yml
+++ b/verify/.nav.yml
@@ -5,7 +5,7 @@ nav:
   - 'Get an API key': get-api-key.md
   - 'Get started': quickstart.md
   - 'Tools reference': tools.md
-  - 'Rules': rules.md
+  - 'rules': rules.md
   - 'Integrations': integrations
   - 'Examples': examples
 
