--- a/.github/workflows/trigger-n8n-workflow.yml
+++ b/.github/workflows/trigger-n8n-workflow.yml
@@ -298,7 +298,7 @@ jobs:
   receive-validate-and-comment:
     runs-on: ubuntu-latest
     needs: gather-and-send
-    if: ${{ needs.gather-and-send.results == 'success' && needs.gather-and-send.outputs.filtered_file_count != '0' }}
+    if: ${{ needs.gather-and-send.result == 'success' && needs.gather-and-send.outputs.filtered_file_count != '0' }}
     environment: n8n-receiving
     steps:
       # Step 13: Re-checkout repo (fresh workspace)
