Fix navigation title capitalization to sentence case

--- a/code-reviews/faq/.nav.yml
+++ b/code-reviews/faq/.nav.yml
@@ -1,4 +1,4 @@
 title: FAQ
 hide: false
 nav:
-  - 'How to Use Activation Codes': activation-codes.md
+  - 'How to use activation codes': activation-codes.md
