--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -7,5 +7,6 @@ nav:
   - 'Tools reference': tools.md
   - 'Configuration': configuration
   - 'Examples': examples
-  - 'FAQ': faq
+  - 'FAQ': faq.md
+  - 'How to use activation codes': activation-codes.md
 
