--- a/code-reviews/get-started/.nav.yml
+++ b/code-reviews/get-started/.nav.yml
@@ -2,4 +2,4 @@ title: Get Started
 hide: false
 nav:
   - 'Installation': installation.md
-  - 'Pick Your Workflow': pick-your-workflow.md
+  - 'Pick your workflow': pick-your-workflow.md
