--- a/code-reviews/instant-ide-mode/.nav.yml
+++ b/code-reviews/instant-ide-mode/.nav.yml
@@ -2,3 +2,4 @@ title: Instant IDE Mode
 hide: false
 nav:
   - 'Instant Actions': instant-actions
+  - 'Background auto reviews': background-auto-reviews
