--- a/code-reviews/get-started/.nav.yml
+++ b/code-reviews/get-started/.nav.yml
@@ -3,3 +3,4 @@ hide: false
 nav:
   - 'Installation': installation.md
   - 'Pick your workflow': pick-your-workflow.md
+  - 'Troubleshooting': troubleshooting.md
