--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -7,5 +7,6 @@ nav:
   - 'Instant IDE Mode': instant-ide-mode
   - 'Configuration': configuration
   - 'FAQ': faq.md
+  - 'Troubleshooting': troubleshooting.md
   - 'Reference': reference
   - 'How to use activation codes': activation-codes.md
