--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -1,8 +1,8 @@
 title: Code Reviews
 hide: false
 nav:
-  - 'Review Modes': review-modes.md
-  - 'Get Started': get-started
+  - 'Review modes': review-modes.md
+  - 'Get started': get-started
   - 'Agent Mode': agent-mode
   - 'Instant IDE Mode': instant-ide-mode
   - 'Configuration': configuration
