--- a/code-reviews/agent-mode/examples/.nav.yml
+++ b/code-reviews/agent-mode/examples/.nav.yml
@@ -1,5 +1,3 @@
-title: Examples
-hide: false
 nav:
-  - 'Cursor: Firebase Authentication': cursor-firebase-nextjs.md
-  - 'VS Code: Secure Admin Endpoints': vscode-admin-endpoint.md
+  - 'Cursor: Firebase authentication': cursor-firebase-nextjs.md
+  - 'VS Code: secure admin endpoints': vscode-admin-endpoint.md
