--- a/code-reviews/agent-mode/automatic-agent-reviews/.nav.yml
+++ b/code-reviews/agent-mode/automatic-agent-reviews/.nav.yml
@@ -1,5 +1,3 @@
-title: Automatic Agent Reviews
-hide: false
 nav:
   - 'Quickstart': quickstart.md
-  - 'Dependency Checks': dependency-checks.md
+  - 'Dependency checks': dependency-checks.md
