--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -3,8 +3,8 @@ hide: false
 nav:
   - 'Review modes': review-modes.md
   - 'Get started': get-started
-  - 'Vibe Coding': agent-mode
-  - 'Manual Coding': instant-ide-mode
+  - 'Human-written code': instant-ide-mode
+  - 'AI-generated code': agent-mode
   - 'Configuration': configuration
   - 'FAQ': faq.md
   - 'Reference': reference
