--- a/code-reviews/agent-mode/automatic-agent-reviews/.nav.yml
+++ b/code-reviews/agent-mode/automatic-agent-reviews/.nav.yml
@@ -1,5 +1,5 @@
-title: Automatic Reviews
+title: Automatic reviews
 hide: false
 nav:
   - 'Quickstart': quickstart.md
-  - 'Dependency Checks': dependency-checks.md
+  - 'Dependency checks': dependency-checks.md
