--- a/code-reviews/instant-ide-mode/.nav.yml
+++ b/code-reviews/instant-ide-mode/.nav.yml
@@ -1,5 +1,5 @@
-title: Manual Coding
+title: Human-written code
 hide: false
 nav:
-  - 'Manual Reviews': instant-actions
-  - 'Background Auto Reviews': background-auto-reviews
+  - 'On-demand reviews': instant-actions
+  - 'Background auto reviews': background-auto-reviews
