--- a/code-reviews/instant-ide-mode/.nav.yml
+++ b/code-reviews/instant-ide-mode/.nav.yml
@@ -1,4 +1,4 @@
 title: Human-written code
 nav:
   - 'On-demand reviews': instant-actions
-  - 'Background auto reviews': background-auto-reviews
+  - 'Automatic reviews': background-auto-reviews
