Restructure Code Reviews documentation to use workflow-based terminology: (#222)
* layout

* updating conf tools

* fixing copy

* update name

* llms

* update naming

* update naming

* update menu

* update folder structure

* llms

---------

Co-authored-by: Alberto Viera <albertoviera@gmail.com>

--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -1,8 +1,8 @@
 nav:
   - 'Review modes': review-modes.md
   - 'Get started': get-started
-  - 'Agent Mode': agent-mode
-  - 'Instant IDE Mode': instant-ide-mode
+  - 'Human-written code': human-written-code
+  - 'AI-generated code': ai-generated-code
   - 'Configuration': configuration
   - 'FAQ': faq.md
   - 'Troubleshooting': troubleshooting.md
