--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -1,8 +1,8 @@
 nav:
   - 'Review modes': review-modes.md
   - 'Get started': get-started
-  - 'Human-written code': human-written-code
-  - 'AI-generated code': ai-generated-code
+  - 'IDE reviews': ide-reviews
+  - 'Repo reviews': repo-reviews
   - 'Configuration': configuration
   - 'FAQ': faq.md
   - 'Troubleshooting': troubleshooting.md
