--- a/code-reviews/.nav.yml
+++ b/code-reviews/.nav.yml
@@ -3,6 +3,7 @@ nav:
   - 'Get started': get-started
   - 'IDE reviews': ide-reviews
   - 'Repo reviews': repo-reviews
+  - 'CLI': cli
   - 'Configuration': configuration
   - 'FAQ': faq.md
   - 'Troubleshooting': troubleshooting.md
